
  - Add Make-like error messages when asked to build a source file,
    and before trying to build a file that doesn't have all its source
    files (including when an invalid drive letter is used on WIN32).

  - Add an scons-local-{version} package (in both .tar.gz and .zip
    flavors) to help people who want to ship SCons as a stand-alone
    build tool in their software packages.

 From Steven Knight and Anthony Roach:

  - Man page:  document the fact that Builder calls return Node objects.

 From Steve LeBlanc:

  - Refactor option processing to use our own version of Greg Ward's
    Optik module, modified to run under Python 1.5.2.

  - Add a ParseConfig() command to modify an environment based on
    parsing output from a *-config command.

 From Jeff Petkau:

  - Fix interpretation of '#/../foo' on Win32 systems.

 From Anthony Roach:

 - Fixed use of command lines with spaces in their arguments,
   and use of Nodes with spaces in their string representation.

 - Make access and modification times of files in a BuildDir match
   the source file, even when hard linking isn't available.

 - Make -U be case insensitive on Win32 systems.

 - Issue a warning and continue when finding a corrupt .sconsign file.

 - Fix using an alias as a dependency of a target so that if one of the
   alias' dependencies gets rebuilt, the resulting target will, too.

 - Fix differently ordered targets causing unnecessary rebuilds
   on case insensitive systems.

 - Use os.system() to execute external commands whenever the "env"
   utility is available, which is much faster than fork()/exec(),
   and fixes the -j option on several platforms.

  - Fix use of -j with multiple targets.

  - Add an Options() object for friendlier accomodation of command-
    line arguments.

  - Add support for Microsoft VC++ precompiled header (.pch) files,
    debugger (.pdb) files, and resource (.rc) files.

  - Don't compute the $_CPPINCFLAGS, $_F77INCFLAGS, $_LIBFLAGS and